add all mutators, add varargs case

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
     </dependency>
   </dependencies>
 
-
   <build>
     <plugins>
       <plugin>
@@ -42,6 +41,9 @@
             <version>1.0.0</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <mutators>ALL</mutators>
+        </configuration>
       </plugin>
     </plugins>
   </build>
